styled layout issue

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ form h2{
     color: #035A9D;
 }
 
-#input-text{
+#input-text,.translated{
     resize: none;
     width: 81.28%;
     border: none;
@@ -86,7 +86,12 @@ form h2{
     padding: 12px 5px 76px 10px;
     margin: auto;
 }
-
+.translated{
+    margin-left: 32px;
+    color:#000;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+}
 textarea::placeholder{
     color:#333333;
 }
@@ -109,6 +114,11 @@ textarea:focus{
     margin-left: 45px;
     margin-bottom: 15px;
 }
+
+input[type="radio"]{
+    width: 18px;
+}
+
 .translated-text{
     display: '';
 }
@@ -127,15 +137,16 @@ textarea:focus{
     border-radius: 6px;
 }
 
+.submit-btn:hover,.submit-btn:focus
+,.reset-btn:hover,.reset-btn:focus{
+    background-color:#0475CC;
+}
+
 .reset-btn{
     display: none;
 }
 
-.translated{
-    width: 81.28%;
-    border-radius: 8px;
-    background-color: #EFF0F4;
-    padding: 12px 5px 100px 10px;
-    margin: auto;
-}
+
+
+
 
